# CG-coursework

./: CMakeLists.txt  README.md  run.bat
1/CG_coursework2/: readme.md
1/CG_coursework2/lib/: glut32.lib
CG_coursework1/: CMakeLists.txt  report.tex
CG_coursework1/src/: main.cpp
CG_coursework2/: house.cpp  readme.md  report.tex  shapes.cpp
src/: graphics.cpp  graphics.h  main.cpp
